changed navigation bar, show bet view

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -55,9 +55,11 @@
     <script src="app/groups/groups.controller.js"></script>
     <script src="app/teams/teams.controller.js"></script>
     <script src="app/games/games.controller.js"></script>
-    <script src="app/bets/bets.controller.js"></script>
     <script src="app/admin/admin.controller.js"></script>
     <script src="app/ranking/ranking.controller.js"></script>
+    <script src="app/bets/bets.controller.js"></script>
+    <script src="app/bets/bets.groups.controller.js"></script>
+    <script src="app/bets/bets.games.controller.js"></script>
     <!-- services -->
     <script src="app/components/auth.services.js"></script>
     <script src="app/teams/team.service.js"></script>
