--- a/src/main/resources/static/app/navbar/navbar.view.html
+++ b/src/main/resources/static/app/navbar/navbar.view.html
@@ -11,30 +11,38 @@
             </button>
             <a class="navbar-brand" href="#">FIFA Russia 2018</a>
         </div>
+
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li ui-sref-active="active"><a ui-sref="rules">Rules</a></li>
+                <li ui-sref-active="active"><a ui-sref="ranking">Ranking</a></li>
                 <li ui-sref-active="active"><a ui-sref="teams">Teams</a></li>
-                <li ui-sref-active="active"><a ui-sref="groups">Groups</a></li>
-                <li ui-sref-active="active"><a ui-sref="games">Matches</a></li>
-                <li ui-sref-active="active"><a ui-sref="ranking">User Ranking</a></li>
 
-                <li><a href="#/">Contact</a></li>
-            </ul>
+                <li class="dropdown" ui-sref-active="active">
+                    <a href class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                        Games <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a ui-sref="groups">Groups View</a></li>
+                        <li><a ui-sref="games">Matches View</a></li>
+                    </ul>
+                </li>
 
-
-
-            <ul class="nav navbar-nav navbar-right" >
                 <li class="dropdown" ui-sref-active="active">
                     <a href class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         Bets <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="#/bets/mine">My bets</a></li>
+                        <li><a ui-sref="bets-groups">Groups View</a></li>
+                        <li><a ui-sref="bets-games">Matches View</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="#/bets/statistics">Statistics</a></li>
+                        <li><a ui-sref="bets-manage">Manage Bets</a></li>
                     </ul>
                 </li>
+
+                <li><a href="#/">Contact</a></li>
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right" >
                 <li ui-sref-active="active" data-ng-hide="Account.authenticate"><a ui-sref="join">Join</a></li>
                 <li class="dropdown" data-ng-show="Account.authenticate">
                     <a href class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -52,6 +60,6 @@
                     </ul>
                 </li>
             </ul>
-        </div><!--/.nav-collapse -->
+        </div>
     </div>
 </nav>
