--- a/src/main/resources/static/app/ranking/ranking.view.html
+++ b/src/main/resources/static/app/ranking/ranking.view.html
@@ -1,25 +1,23 @@
 <section id="ranking">
-    <div>
-    <h1>User Ranking</h1>
+
+    <div class="jumbotron">
+        <h1>Ranking</h1>
+        <p>Welcome to FIFA Russia 2018 Betting, Here are the leading Gamblers:</p>
+
+        <table class="table table-hover table-condensed">
+            <thead>
+            <tr>
+                <th scope="col">Username</th>
+                <th scope="col">Points</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="userRankingData in rankingData">
+                <td>{{userRankingData.account.fullName}}</td>
+                <td>{{userRankingData.totalPoints}}</td>
+            </tr>
+            </tbody>
+        </table>
     </div>
-
-
-<div class="panel-heading">
-
-<table class="table table-hover table-condensed">
-    <thead>
-    <tr>
-    <th scope="col">Username</th>
-    <th scope="col">Points</th>
-    </tr>
-    </thead>
-    <tbody>
-        <tr ng-repeat="userRankingData in rankingData">
-        <td>{{userRankingData.account.fullName}}</td>
-        <td>{{userRankingData.totalPoints}}</td>
-        </tr>
-    </tbody>
-</table>
-</div>
 
 </section>
