fixed game update bugs some UI improvements

--- a/src/main/resources/static/app/admin/admin.view.html
+++ b/src/main/resources/static/app/admin/admin.view.html
@@ -89,7 +89,7 @@
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="machtQualifier">Match qualifier:</label>
                     <div class="col-sm-10">
-                        <select id="machtQualifier" class="form-control" ng-model="matchResult.qualifier" ng-options="x for x in ['HOME_TEAM','AWAY_TEAM']"></select>
+                        <select id="machtQualifier" class="form-control" ng-model="matchResult.matchQualifier" ng-options="x for x in ['HOME_TEAM','AWAY_TEAM']"></select>
                     </div>
                 </div>
 
