--- a/src/main/resources/static/app/groups/groups.view.html
+++ b/src/main/resources/static/app/groups/groups.view.html
@@ -1,11 +1,15 @@
 <section id="groups">
     <div>
-        <h1>Groups</h1>
+        <h1>Groups
+            <small>
+                <a role="button" ng-click="scrollTo('group-id-'+group.groupId)" ng-repeat="group in groups"> {{group.groupId}} </a>
+            </small>
+        </h1>
     </div>
 
-    <div class="panel panel-primary" ng-repeat="group in groups" ui-view>
+    <div id="group-id-{{group.groupId}}" class="panel panel-primary" ng-repeat="group in groups" ui-view>
 
-        <div class="panel-heading">Group {{group.groupId}}</div>
+        <div class="panel-heading" >Group {{group.groupId}}</div>
 
         <table class="table table-hover table-condensed">
             <thead>
@@ -23,11 +27,7 @@
             </thead>
             <tbody>
             <tr ng-repeat-start="teamInGroup in prepareTeamsInGroup(group.teamsInGroup)">
-                <th>
-                    <h3>
-                        <team data="teamInGroup.team"/>
-                    </h3>
-                </th>
+                <th><h4><team data="teamInGroup.team"/></h4></th>
                 <td>{{teamInGroup.gamesPlayed }}</td>
                 <td>{{teamInGroup.gamesWon }}</td>
                 <td>{{teamInGroup.gamesTied }}</td>
