--- a/src/main/resources/static/app/admin/admin.view.html
+++ b/src/main/resources/static/app/admin/admin.view.html
@@ -65,20 +65,22 @@
                             <td class="col-md-4"><team data="selected.match.awayTeam"></team></td>
                             <td class="col-md-1 text-center">
                                 <input type="number"
+                                       min="0" max="20"
                                        class="form-control"
-                                       id="homeTeamGaols"
                                        placeholder="Enter score"
                                        ng-model="matchResult.homeTeamGoals"
-                                       size="3">
+                                       size="3"
+                                       ng-change="onGoalsChanged()">
                             </td>
                             <td class="col-md-1 text-center">:</td>
                             <td class="col-md-1 text-center">
                                 <input type="number"
+                                       min="0" max="20"
                                        class="form-control"
-                                       id="awayTeamGoals"
                                        placeholder="Enter score"
                                        ng-model="matchResult.awayTeamGoals"
-                                       size="3">
+                                       size="3"
+                                       ng-change="onGoalsChanged()">
                             </td>
                         </tr>
                         </tbody>
@@ -89,7 +91,7 @@
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="machtQualifier">Match qualifier:</label>
                     <div class="col-sm-10">
-                        <select id="machtQualifier" class="form-control" ng-model="matchResult.matchQualifier" ng-options="x for x in ['HOME_TEAM','AWAY_TEAM']"></select>
+                        <select id="machtQualifier" class="form-control" ng-model="matchResult.matchQualifier" ng-options="x for x in options.matchQualifier"></select>
                     </div>
                 </div>
 
