--- a/src/main/resources/static/app/navbar/navbar.view.html
+++ b/src/main/resources/static/app/navbar/navbar.view.html
@@ -24,6 +24,10 @@
                     <ul class="dropdown-menu">
                         <li><a ui-sref="groups">Groups View</a></li>
                         <li><a ui-sref="games">Matches View</a></li>
+                        <li role="separator" class="divider" permission="['ROLE_ADMIN']"></li>
+                        <li ui-sref-active="active" permission="['ROLE_ADMIN']">
+                            <a ui-sref="admin">Update Match <small>admin only!</small></a></li>
+                        </li>
                     </ul>
                 </li>
 
@@ -53,9 +57,11 @@
                         <li><a href="#">Profile</a></li>
                         <li><a href="#">Settings</a></li>
                         <li role="separator" class="divider"></li>
+                        <!--
                         <li ui-sref-active="active" permission="['ROLE_ADMIN']">
                            <a ui-sref="admin">Update Match <small>admin</small></a></li>
                         </li>
+                        -->
                         <li><a href data-ng-click="logout()">Log out</a></li>
                     </ul>
                 </li>
