--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -52,7 +52,7 @@
     <script src="app.js"></script>
     <!-- controllers -->
     <script src="app/navbar/navbar.controller.js"></script>
-    <script src="app/groups/groups.controller.js"></script>
+    <script src="app/games/games.groups.controller.js"></script>
     <script src="app/teams/teams.controller.js"></script>
     <script src="app/games/games.controller.js"></script>
     <script src="app/admin/admin.controller.js"></script>
