--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -47,7 +47,6 @@
     <script src="js/loading-bar.min.js" type="text/javascript"></script>
     <script src="js/angular-growl.min.js" type="text/javascript"></script>
     <script src="js/select.min.js" type="text/javascript"></script>
-
     <!-- create the app module first -->
     <script src="app.js"></script>
     <!-- controllers -->
@@ -60,6 +59,7 @@
     <script src="app/bets/bets.controller.js"></script>
     <script src="app/bets/bets.groups.controller.js"></script>
     <script src="app/bets/bets.games.controller.js"></script>
+    <script src="app/accounts/accounts.controller.js"></script>
     <!-- services -->
     <script src="app/components/auth.services.js"></script>
     <script src="app/teams/team.service.js"></script>
