--- a/src/main/resources/static/app/ranking/ranking.view.html
+++ b/src/main/resources/static/app/ranking/ranking.view.html
@@ -7,13 +7,19 @@
         <table class="table table-hover table-condensed">
             <thead>
             <tr>
+                <th>Rank</th>
                 <th scope="col">Username</th>
                 <th scope="col">Points</th>
             </tr>
             </thead>
             <tbody>
             <tr ng-repeat="userRankingData in rankingData">
-                <td>{{userRankingData.account.fullName}}</td>
+                <td>{{$index}}</td>
+                <td>
+                    <img ng-src="{{userRankingData.account.profileImageUrl}}" style="max-height: 50px;"/>
+                    <span >{{userRankingData.account.fullName}}</span>
+                    <span ng-show="userRankingData.account.status=='ACTIVE'" class="glyphicon glyphicon-usd" aria-hidden="true"></span>
+                </td>
                 <td>{{userRankingData.totalPoints}}</td>
             </tr>
             </tbody>
