--- a/src/main/resources/static/app/ranking/ranking.view.html
+++ b/src/main/resources/static/app/ranking/ranking.view.html
@@ -49,6 +49,7 @@
         <ul>
             <li>Correct match result (1X2) worth 1 point</li>
             <li>Guessing exact match score worth another 2 points</li>
+            <li>(result is determined after 90 minutes, not including extra time/penalties)</li>
         </ul>
 
         e.g:<br>
