changed some files names fixed session issue added bets overview page

--- a/src/main/resources/static/app/navbar/navbar.view.html
+++ b/src/main/resources/static/app/navbar/navbar.view.html
@@ -36,6 +36,7 @@
                         Bets <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
+                        <li ui-sref-active="active"><a ui-sref="bets.overview">Overview</a></li>
                         <li ui-sref-active="active"><a ui-sref="bets.groups">Groups View</a></li>
                         <li ui-sref-active="active"><a ui-sref="bets.firststage">Matches View</a></li>
                         <li role="separator" class="divider"></li>
