--- a/src/main/resources/static/app/ranking/ranking.view.html
+++ b/src/main/resources/static/app/ranking/ranking.view.html
@@ -1,7 +1,7 @@
 <section id="ranking">
 
     <div class="jumbotron">
-        <h2>Ranking</h2>
+        <h2>Ranking <small><a class="btn btn-link" ng-click="scrollTo('rules')" >Rules</a></small></h2>
         <p>Welcome to world cup 2018 betting competition:</p>
 
         <table class="table table-hover table-condensed">
@@ -27,12 +27,10 @@
             </tr>
             </tbody>
         </table>
-
-        <p><a class="btn btn-primary btn-sm" role="button" ng-click="scrollTo('rules-j')" >Rules</a></p>
-
     </div>
 
-    <div id="rules-j" class="jumbotron">
+    <div id="rules" class="jumbotron">
+        <h3>Rules</h3>
         <h4>
             You are more than invited to join in, but before you do, please take few minutes to read the rules:
         </h4>
