--- a/src/main/resources/static/app/ranking/ranking.view.html
+++ b/src/main/resources/static/app/ranking/ranking.view.html
@@ -64,11 +64,11 @@
         Qualifier Points (can be changed until the tournament starts)<br>
         For every correct qualifier you get:
         <ul>
-            <li>Round of 16 - 2 points</li>
-            <li> Quarter final - 4 points</li>
-            <li>Semi-final - 8 points</li>
-            <li>Final - 16 points</li>
-            <li>Guessing the correct winner - 32 points</li>
+            <li>Round of 16 - 1 point</li>
+            <li> Quarter final - 2 points</li>
+            <li>Semi-final - 3 points</li>
+            <li>Final - 4 points</li>
+            <li>Guessing the correct Third place/Winner - 5 points</li>
         </ul>
 
 
