--- a/src/main/resources/static/app/navbar/navbar.view.html
+++ b/src/main/resources/static/app/navbar/navbar.view.html
@@ -37,10 +37,8 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li ui-sref-active="active"><a ui-sref="bets.overview">Overview</a></li>
-                        <li ui-sref-active="active"><a ui-sref="bets.groups">Groups View</a></li>
-                        <li ui-sref-active="active"><a ui-sref="bets.firststage">Matches View</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li ui-sref-active="active"><a ui-sref="bets.manage">Manage Bets</a></li>
+                        <li ui-sref-active="active"><a ui-sref="bets.matches">Matches</a></li>
+                        <li ui-sref-active="active"><a ui-sref="bets.qualifier">Qualifiers</a></li>
                     </ul>
                 </li>
 
