--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -56,10 +56,9 @@
     <script src="app/games/games.controller.js"></script>
     <script src="app/admin/admin.controller.js"></script>
     <script src="app/ranking/ranking.controller.js"></script>
-    <script src="app/bets/bets.manage.controller.js"></script>
-    <script src="app/bets/bets.groups.controller.js"></script>
-    <script src="app/bets/bets.games.controller.js"></script>
     <script src="app/bets/bets.overview.controller.js"></script>
+    <script src="app/bets/bets.matches.controller.js"></script>
+    <script src="app/bets/bets.qualifier.controller.js"></script>
     <script src="app/accounts/accounts.controller.js"></script>
     <!-- services -->
     <script src="app/components/auth.services.js"></script>
