qualifiers and more...

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -71,6 +71,7 @@
     <script src="app/directives/matches.directive.js"></script>
     <script src="app/directives/team.directive.js"></script>
     <script src="app/directives/brackets.team.directive.js"></script>
+    <script src="app/directives/match.links.directive.js"></script>
     <script src="app/directives/back-to-top.directive.js"></script>
 
 </body>
