--- a/src/main/resources/static/app/ranking/ranking.view.html
+++ b/src/main/resources/static/app/ranking/ranking.view.html
@@ -9,7 +9,9 @@
             <tr>
                 <th>Rank</th>
                 <th scope="col">Username</th>
-                <th scope="col">Bet Completion</th>
+                <th scope="col">Qualifiers Bet</th>
+                <th scope="col">Group Stage Bet</th>
+                <th scope="col">Knockout Stage Bet</th>
                 <th scope="col">Points</th>
             </tr>
             </thead>
@@ -22,7 +24,9 @@
                     <span ng-show="userRankingData.account.status=='ACTIVE'" class="glyphicon glyphicon-usd"
                           aria-hidden="true"></span>
                 </td>
-                <td>{{userRankingData.betCompletionPercentage}}% Completed</td>
+                <td>{{userRankingData.qualifierBetCompletionPercentage}}% Completed</td>
+                <td>{{userRankingData.groupMatchesBetCompletionPercentage}}% Completed</td>
+                <td>{{userRankingData.knockoutMatchesBetCompletionPercentage}}% Completed</td>
                 <td>{{userRankingData.totalPoints}}</td>
             </tr>
             </tbody>
