--- a/src/main/resources/static/app/navbar/navbar.view.html
+++ b/src/main/resources/static/app/navbar/navbar.view.html
@@ -1,6 +1,6 @@
 
 <!-- Fixed navbar -->
-<nav class="navbar navbar-default navbar-fixed-top navbar-inverse">
+<nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -9,7 +9,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">FIFA Russia 2018</a>
+            <a class="navbar-brand" href="#">
+                <img data-ng-src="/images/logo/logo2.png" class="logo">
+            </a>
         </div>
 
         <div id="navbar" class="collapse navbar-collapse">
@@ -52,7 +54,7 @@
                 <li ui-sref-active="active" data-ng-hide="Account.authenticate"><a ui-sref="join">Join</a></li>
                 <li class="dropdown" data-ng-show="Account.authenticate">
                     <a href class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                        <img ng-src="{{Account.imageUrl}}" style="max-height: 30px;"/> <span class="caret"></span>
+                        <img ng-src="{{Account.imageUrl}}" style="max-height: 40px;"/> <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
                         <li class="dropdown-header">Signed in as {{Account.displayName}}</li>
