update the rules

--- a/src/main/resources/static/app/ranking/ranking.view.html
+++ b/src/main/resources/static/app/ranking/ranking.view.html
@@ -47,7 +47,19 @@
         pot size depends on how many users will join in<br>
         (our hosting costs will be taken from the pot (~50$))<br><br>
 
-        <ins>Points calculation method:</ins><br><br>
+        And What if more than one user is in the first 3 places?<br>
+        1. 2 users share the the highest score<br>
+           They will split 80% (1st and 2nd prizes) of the pot between them<br>
+           The second best score (1 or more users) will split the rest of the pot between them<br>
+           The third best score will not win any prize in this case.<br>
+        2. 3 or more users share the highest score - they split 100% of the pot between them<br>
+           The second and third best doesn't win anything.<br>
+        3. One user has the highest score, 2 or more users share the second highest score<br>
+           The first place will take 50% of the pot<br>
+           The users in the second place will split 50% (2nd and 3rd prizes) of the pot between them<br>
+           Third best score doesn't win anything<br>
+
+        <br><br><ins>Points calculation method:</ins><br><br>
 
         Match Points (can be updated during the tournament, each match until it's kickoff time)<br>
         <ul>
@@ -81,7 +93,7 @@
         Joining can be done via your Facebook/Google account,<br>
         Payment cannot be done using our website - so it's in the good old fashioned way..<br>
         Once you pay we will update your user and you'll see a "$" sign next to your name in the ranking table.<br>
-        Participation costs 100 Shekels/30 USD/20 GBP
+        Participation costs 100 Shekels/30 USD/25 GBP
     </div>
 
 
