update the rules

--- a/src/main/resources/static/app/ranking/ranking.view.html
+++ b/src/main/resources/static/app/ranking/ranking.view.html
@@ -36,10 +36,10 @@
     <div id="rules" class="jumbotron">
         <h3>Rules</h3>
         <h4>
-            You are more than invited to join in, but before you do, please take few minutes to read the rules:
+            You are more than welcome to join in, but before you do, please take few minutes to read the rules:
         </h4>
 
-        Your main goal is to gain as much points as possible<br>
+        Your main goal is to gain as many points as possible<br>
         At the end of the tournament, top 3 users will win the pot<br>
         First place - 50% of the pot<br>
         Second place - 30% of the pot<br>
@@ -47,7 +47,7 @@
         pot size depends on how many users will join in<br>
         (our hosting costs will be taken from the pot (~50$))<br><br>
 
-        And What if more than one user is in the first 3 places?<br>
+        And what if more than one user is in the first 3 places?<br>
         1. 2 users share the the highest score<br>
            They will split 80% (1st and 2nd prizes) of the pot between them<br>
            The second best score (1 or more users) will split the rest of the pot between them<br>
@@ -68,7 +68,7 @@
             <li>(result is determined after 90 minutes, not including extra time/penalties)</li>
         </ul>
 
-        e.g:<br>
+        e.g.:<br>
         Argentina-Iceland<br>
         You guessed Argentina wins 3-1<br>
         If Iceland wins or the match ends up with a draw - you get no points<br>
@@ -77,14 +77,18 @@
 
         This is relevant to all tournament matches (from group stage till the final)<br><br>
 
+        Bet on knockout matches can be done only once the match teams are known<br>
+        Make sure you place your bet before knockout matches, you don't want to lose points because of that<br>
+        Betting on knockout matches is done regardless to the teams chosen by you as qualifiers<br><br>
+
         Qualifier Points (can be changed until the tournament starts)<br>
         For every correct qualifier you get:
         <ul>
             <li>Round of 16 - 1 point</li>
-            <li> Quarter final - 2 points</li>
+            <li>Quarter final - 2 points</li>
             <li>Semi-final - 3 points</li>
             <li>Final - 4 points</li>
-            <li>Guessing the correct Third place/Winner - 5 points</li>
+            <li>Guessing the correct Winner/Third place - 5 points</li>
         </ul>
 
 
@@ -95,8 +99,4 @@
         Once you pay we will update your user and you'll see a "$" sign next to your name in the ranking table.<br>
         Participation costs 100 Shekels/30 USD/25 GBP
     </div>
-
-
-
-
 </section>
