--- a/src/main/resources/static/app/navbar/navbar.view.html
+++ b/src/main/resources/static/app/navbar/navbar.view.html
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="#">
-                <img data-ng-src="/images/logo/logo2.png" class="logo">
+                <img data-ng-src="/images/logo/logo.png" class="logo">
             </a>
         </div>
 
