update qualifier points add bets statistics fix bug on winner qualifier

--- a/src/main/resources/static/app/ranking/ranking.view.html
+++ b/src/main/resources/static/app/ranking/ranking.view.html
@@ -84,11 +84,12 @@
         Qualifier Points (can be changed until the tournament starts)<br>
         For every correct qualifier you get:
         <ul>
-            <li>Round of 16 - 1 point</li>
-            <li>Quarter final - 2 points</li>
-            <li>Semi-final - 3 points</li>
-            <li>Final - 4 points</li>
-            <li>Guessing the correct Winner/Third place - 5 points</li>
+            <li>Round of 16 - 2 point</li>
+            <li>Quarter final - 4 points</li>
+            <li>Semi-final - 6 points</li>
+            <li>Final - 8 points</li>
+            <li>Third Place - 10 points</li>
+            <li>Winner - 12 points</li>
         </ul>
 
 
