groups for bets some small UI changes

--- a/src/main/resources/static/app/navbar/navbar.view.html
+++ b/src/main/resources/static/app/navbar/navbar.view.html
@@ -39,6 +39,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li ui-sref-active="active"><a ui-sref="bets.overview">Overview</a></li>
+                        <li ui-sref-active="active"><a ui-sref="bets.groups">Groups View</a></li>
                         <li ui-sref-active="active"><a ui-sref="bets.matches">Matches</a></li>
                         <li ui-sref-active="active"><a ui-sref="bets.qualifier">Qualifiers</a></li>
                     </ul>
