--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -57,6 +57,7 @@
     <script src="app/admin/admin.controller.js"></script>
     <script src="app/ranking/ranking.controller.js"></script>
     <script src="app/bets/bets.overview.controller.js"></script>
+    <script src="app/bets/bets.groups.controller.js"></script>
     <script src="app/bets/bets.matches.controller.js"></script>
     <script src="app/bets/bets.qualifier.controller.js"></script>
     <script src="app/accounts/accounts.controller.js"></script>
