--- a/src/main/resources/static/app/navbar/navbar.view.html
+++ b/src/main/resources/static/app/navbar/navbar.view.html
@@ -16,6 +16,7 @@
 
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
+                <li ui-sref-active="active"><a ui-sref="rules">Rules</a></li>
                 <li ui-sref-active="active"><a ui-sref="ranking">Ranking</a></li>
                 <li ui-sref-active="active"><a ui-sref="teams">Teams</a></li>
 
