--- a/src/main/resources/static/app/rules/rules.view.html
+++ b/src/main/resources/static/app/rules/rules.view.html
@@ -1,16 +1,71 @@
 <section id="rules">
 
     <div class="jumbotron">
-        <h1>Hello!</h1>
-        <p>Welcome to FIFA Russia 2018 Betting
-        <br>In order to participate in the betting application you must follow the following rules:
-        <ol>
-            <li>Be fare</li>
-            <li>Do right</li>
-            <li>Don't be evil</li>
-            <li>Be kind</li>
-        </ol>
-        </p>
+        <h2>Rules</h2>
+        <h4>
+            You are more than welcome to join in, but before you do, please take few minutes to read the rules:
+        </h4>
+
+        Your main goal is to gain as many points as possible<br>
+        At the end of the tournament, top 3 users will win the pot<br>
+        First place - 50% of the pot<br>
+        Second place - 30% of the pot<br>
+        Third place - 20% of the pot<br>
+        pot size depends on how many users will join in<br>
+        (our hosting costs will be taken from the pot (~50$))<br><br>
+
+        And what if more than one user is in the first 3 places?<br>
+        1. 2 users share the the highest score<br>
+        They will split 80% (1st and 2nd prizes) of the pot between them<br>
+        The second best score (1 or more users) will split the rest of the pot between them<br>
+        The third best score will not win any prize in this case.<br>
+        2. 3 or more users share the highest score - they split 100% of the pot between them<br>
+        The second and third best doesn't win anything.<br>
+        3. One user has the highest score, 2 or more users share the second highest score<br>
+        The first place will take 50% of the pot<br>
+        The users in the second place will split 50% (2nd and 3rd prizes) of the pot between them<br>
+        Third best score doesn't win anything<br>
+
+        <br><br><ins>Points calculation method:</ins><br><br>
+
+        Match Points (can be updated during the tournament, each match until it's kickoff time)<br>
+        <ul>
+            <li>Correct match result (1X2) worth 1 point</li>
+            <li>Guessing exact match score worth another 2 points</li>
+            <li>(result is determined after 90 minutes, not including extra time/penalties)</li>
+        </ul>
+
+        e.g.:<br>
+        Argentina-Iceland<br>
+        You guessed Argentina wins 3-1<br>
+        If Iceland wins or the match ends up with a draw - you get no points<br>
+        If Argentina wins in every score except 3-1 - you get 1 point<br>
+        If Argentina wins exactly 3-1 - you get 3 points<br><br>
+
+        This is relevant to all tournament matches (from group stage till the final)<br><br>
+
+        Bet on knockout matches can be done only once the match teams are known<br>
+        Make sure you place your bet before knockout matches, you don't want to lose points because of that<br>
+        Betting on knockout matches is done regardless to the teams chosen by you as qualifiers<br><br>
+
+        Qualifier Points (can be changed until the tournament starts)<br>
+        For every correct qualifier you get:
+        <ul>
+            <li>Round of 16 - 2 point</li>
+            <li>Quarter final - 4 points</li>
+            <li>Semi-final - 6 points</li>
+            <li>Final - 8 points</li>
+            <li>Third Place - 10 points</li>
+            <li>Winner - 12 points</li>
+        </ul>
+
+
+        <ins>Participation Method and Costs</ins><br><br>
+
+        Joining can be done via your Facebook/Google account,<br>
+        Payment cannot be done using our website - so it's in the good old fashioned way..<br>
+        Once you pay we will update your user and you'll see a "$" sign next to your name in the ranking table.<br>
+        Participation costs 100 Shekels/30 USD/25 GBP
     </div>
 
 </section>
