--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -40,6 +40,7 @@
     <script src="js/angular-animate.min.js" type="text/javascript"></script>
     <script src="js/angular-sanitize.min.js" type="text/javascript"></script>
     <script src="js/angular-ui-router.min.js" type="text/javascript"></script>
+    <script src="js/angular-cookie.min.js" type="text/javascript"></script>
     <script src="js/statehelper.min.js" type="text/javascript"></script>
     <script src="js/angular-resource.min.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
