--- a/src/main/resources/static/app/ranking/ranking.view.html
+++ b/src/main/resources/static/app/ranking/ranking.view.html
@@ -7,13 +7,15 @@
         <table class="table table-hover table-striped table-bordered">
             <thead>
             <tr>
+                <th>#</th>
                 <th>Rank</th>
                 <th scope="col">Username</th>
                 <th scope="col">Points</th>
             </tr>
             </thead>
             <tbody>
-            <tr ng-repeat="ranking in rankingData">
+            <tr ng-repeat="ranking in rankingData" ng-class="{'border_highlight': ranking.account.id === Account.id } ">
+                <td>{{$index+1}}</td>
                 <td>
                     <span ng-show="ranking.rank < ranking.prevRank">
                         <span>({{ranking.prevRank-ranking.rank}})</span>
@@ -36,9 +38,7 @@
                     <span ng-show="ranking.points > ranking.prevPoints">
                         (+{{ranking.points - ranking.prevPoints}})
                     </span>
-                    <span ng-show="ranking.points == ranking.prevPoints">
-                        (-)
-                    </span>
+
                     <span><strong>{{ranking.points}}</strong></span>
                 </td>
             </tr>
