--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -32,7 +32,7 @@
         <div class="container" ui-view="content"></div>
     </div>
 
-    <back-to-top/>
+    <back-to-top></back-to-top>
 
     <!-- framework -->
     <script src="js/jquery.min.js" type="text/javascript"></script>
