--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>FIFA World Cup - Betting application</title>
+    <title>FIFA Euro 2020 (actually 2021) - Betting application</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/loading-bar.min.css" rel="stylesheet" media='all' >
