updated for Qatar 2022 new Spring version New user registration method

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,7 +15,7 @@
     <link href="css/xeditable.min.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet">
 
-    <style type="text/css">
+    <style>
         [ng\:cloak], [ng-cloak], .ng-cloak {
             display: none !important;
         }
@@ -62,6 +62,8 @@
     <script src="app/bets/bets.matches.controller.js"></script>
     <script src="app/bets/bets.qualifier.controller.js"></script>
     <script src="app/accounts/accounts.controller.js"></script>
+    <script src="app/login/login.controller.js"></script>
+    <script src="app/register/register.controller.js"></script>
     <!-- services -->
     <script src="app/components/auth.services.js"></script>
     <script src="app/teams/team.service.js"></script>
