--- a/src/main/resources/static/app/navbar/navbar.view.html
+++ b/src/main/resources/static/app/navbar/navbar.view.html
@@ -10,7 +10,8 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="#">
-                <img data-ng-src="/images/logo/logo.png" class="logo">
+               <span style="color: white; font-weight: bold;"> WORLD CUP QATAR 2022</span>
+<!--                <img data-ng-src="/images/logo/world-cup-2022-logo.png" class="logo">-->
             </a>
         </div>
 
@@ -54,6 +55,7 @@
 
             <ul class="nav navbar-nav navbar-right" >
                 <li ui-sref-active="active" data-ng-hide="Account.authenticate"><a ui-sref="join">Join</a></li>
+                <li ui-sref-active="active" data-ng-hide="Account.authenticate"><a ui-sref="login">Login</a></li>
                 <li class="dropdown" data-ng-show="Account.authenticate">
                     <a href class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         <img ng-src="{{Account.imageUrl}}" style="max-height: 40px;"/> <span class="caret"></span>
