--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,6 +8,8 @@
 
     <title>FIFA World Cup - Betting application</title>
 
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
+
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/loading-bar.min.css" rel="stylesheet" media='all' >
     <link href="css/bracket.css" rel="stylesheet">
