--- a/src/main/resources/static/app/login/login.view.html
+++ b/src/main/resources/static/app/login/login.view.html
@@ -8,12 +8,12 @@
 
         <div style="margin-bottom: 25px" class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-          <input class="form-control" type="email"  name="username" id="login-username" placeholder="email" required />
+          <input class="form-control" type="email"  name="username" id="login-username" placeholder="email" ng-model="credentials.username" required />
         </div>
 
         <div style="margin-bottom: 25px" class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-          <input class="form-control" type="password"  name="password" id="login-password" placeholder="password" required />
+          <input class="form-control" type="password"  name="password" id="login-password" placeholder="password" ng-model="credentials.password" required />
         </div>
 
         <div class="input-group">
@@ -25,7 +25,7 @@
         </div>
 
         <div style="margin-top:10px" class="form-group">
-            <input class="btn btn-success" type="submit" name="loginBtn" value="Login">
+            <input class="btn btn-success" type="button" name="loginBtn" value="Login" data-ng-click="login()">
         </div>
 
         <div class="form-group">
