--- a/src/main/resources/static/app/register/register.view.html
+++ b/src/main/resources/static/app/register/register.view.html
@@ -7,27 +7,27 @@
 
         <div style="margin-bottom: 25px" class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-          <input class="form-control" type="text" name="firstname" id="firstname" placeholder="First Name" required />
+          <input class="form-control" type="text" name="firstname" id="firstname" placeholder="First Name" ng-model="registerData.firstName" required />
         </div>
 
         <div style="margin-bottom: 25px" class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-          <input class="form-control" type="text" name="lastname" id="lastname" placeholder="Last Name" required />
+          <input class="form-control" type="text" name="lastname" id="lastname" placeholder="Last Name" ng-model="registerData.lastName" required />
         </div>
 
         <div style="margin-bottom: 25px" class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-          <input class="form-control" type="email" name="email" id="email" placeholder="Email" required />
+          <input class="form-control" type="email" name="email" id="email" placeholder="Email" ng-model="registerData.email" required />
         </div>
 
         <div style="margin-bottom: 25px" class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-          <input class="form-control" type="password" name="password" id="password" placeholder="Password" minlength="4" maxlength="16" required />
+          <input class="form-control" type="password" name="password" id="password" placeholder="Password" ng-model="registerData.password" minlength="4" maxlength="16" required />
         </div>
 
         <div style="margin-bottom: 25px" class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-          <input class="form-control" type="password" name="passwordConfirm" id="passwordConfirm" placeholder="Enter again to validate" minlength="4" maxlength="16" required />
+          <input class="form-control" type="password" name="passwordConfirm" id="passwordConfirm" ng-model="registerData.passwordConfirm" placeholder="Enter again to validate" minlength="4" maxlength="16" required />
         </div>
 
 
@@ -39,7 +39,7 @@
         </div>
 
         <div class="form-group">
-          <input class="btn btn-success" type="submit" name="submit_reg" value="Register">
+          <input class="btn btn-success" type="button" name="submit_reg" value="Register" data-ng-click="register()">
         </div>
 
         <div class="form-group">
