--- a/src/main/resources/static/app/navbar/navbar.view.html
+++ b/src/main/resources/static/app/navbar/navbar.view.html
@@ -63,6 +63,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li class="dropdown-header">Signed in as {{Account.displayName}}</li>
+                        <li ui-sref-active="active"><a ui-sref="join">Update Details</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href data-ng-click="logout()">Log out</a></li>
                     </ul>
