--- a/src/main/resources/static/app/ranking/ranking.view.html
+++ b/src/main/resources/static/app/ranking/ranking.view.html
@@ -2,7 +2,7 @@
 
     <div class="jumbotron">
         <h2>Ranking <small><a class="btn btn-link" ui-sref="rules">Rules</a></small></h2>
-        <p>Welcome to world cup 2018 betting competition:</p>
+        <p>Welcome to Qatar 2022 world cup betting competition:</p>
 
         <table class="table table-hover table-striped table-bordered">
             <thead>
