--- a/src/main/resources/static/app/register/register.view.html
+++ b/src/main/resources/static/app/register/register.view.html
@@ -1,57 +1,59 @@
 <div class="jumbotron">
-  <h3>Register Here!</h3>
+    <h3>Register Here!</h3>
 
-  <div class="row">
-    <div class="col-md-6">
-      <form action="" method="post" id="fileForm" role="form">
+    <div class="row">
+        <div class="col-md-6">
+            <form name="registrationForm" role="form" ng-submit="submit()">
 
-        <div style="margin-bottom: 25px" class="input-group">
-          <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-          <input class="form-control" type="text" name="firstname" id="firstname" placeholder="First Name" ng-model="registerData.firstName" required />
+                <div style="margin-bottom: 25px" class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                    <input class="form-control" type="text" name="firstname" id="firstname" placeholder="First Name"
+                           ng-model="registerData.firstName" required/>
+                </div>
+
+                <div style="margin-bottom: 25px" class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                    <input class="form-control" type="text" name="lastname" id="lastname" placeholder="Last Name"
+                           ng-model="registerData.lastName" required/>
+                </div>
+
+                <div style="margin-bottom: 25px" class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                    <input class="form-control" type="email" name="email" id="email" placeholder="Email"
+                           ng-model="registerData.email" ng-disabled="Account.authenticate" required/>
+                </div>
+
+                <div style="margin-bottom: 25px" class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                    <input class="form-control" type="password" name="password" id="password" placeholder="Password"
+                           ng-model="registerData.password" minlength="4" maxlength="16" required/>
+                </div>
+
+                <div style="margin-bottom: 25px;" class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                    <input class="form-control" type="password" name="passwordConfirm" id="passwordConfirm"
+                           placeholder="Password confirmation"
+                           ng-model="registerData.passwordConfirm"
+                           ng-pattern="registerData.password"
+                           required/>
+                    <span class="input-group-addon alert-warning"
+                         ng-show="registrationForm.passwordConfirm.$dirty && registrationForm.passwordConfirm.$invalid">Passwords don't match</span>
+                </div>
+
+
+                <div style="margin-bottom: 25px;" class="form-group" ng-show="registerData.action=='Register'">
+                    <div  style="border-top: 1px solid#888; padding-top:15px; font-size:85%">
+                        You will receive an email to complete the registration and validation process. Be sure
+                            to check your spam folders. Already registered? <a href="#/login/">Login in Here</a>
+                    </div>
+                </div>
+
+
+                <div style="margin-top: 25px;" class="form-group">
+                    <input class="btn btn-success" type="submit" ng-value="registerData.action" ng-disabled="registrationForm.$invalid">
+                </div>
+
+            </form>
         </div>
-
-        <div style="margin-bottom: 25px" class="input-group">
-          <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-          <input class="form-control" type="text" name="lastname" id="lastname" placeholder="Last Name" ng-model="registerData.lastName" required />
-        </div>
-
-        <div style="margin-bottom: 25px" class="input-group">
-          <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-          <input class="form-control" type="email" name="email" id="email" placeholder="Email" ng-model="registerData.email" required />
-        </div>
-
-        <div style="margin-bottom: 25px" class="input-group">
-          <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-          <input class="form-control" type="password" name="password" id="password" placeholder="Password" ng-model="registerData.password" minlength="4" maxlength="16" required />
-        </div>
-
-        <div style="margin-bottom: 25px" class="input-group">
-          <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-          <input class="form-control" type="password" name="passwordConfirm" id="passwordConfirm" ng-model="registerData.passwordConfirm" placeholder="Enter again to validate" minlength="4" maxlength="16" required />
-        </div>
-
-
-        <div class="form-group">
-          <input type="hidden" value="" name="dateregistered">
-          <input type="hidden" value="0" name="activate" />
-          <hr>
-          <input type="checkbox" required name="terms" id="field_terms">   <label for="terms">I agree with the <a href="#" title="You may read our terms and conditions by clicking on this link">terms and conditions</a> for Registration.</label><span class="req">* </span>
-        </div>
-
-        <div class="form-group">
-          <input class="btn btn-success" type="button" name="submit_reg" value="Register" data-ng-click="register()">
-        </div>
-
-        <div class="form-group">
-          <div class="col-md-12 control">
-            <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%">
-              You will receive an email to complete the registration and validation process. Be sure to check your spam folders.
-              <div>Already registered? <a href="#/login">Login in Here</a></div>
-            </div>
-          </div>
-        </div>
-
-      </form>
     </div>
-  </div>
 </div>
