--- a/src/main/resources/static/app/register/register.view.html
+++ b/src/main/resources/static/app/register/register.view.html
@@ -20,7 +20,7 @@
                 <div style="margin-bottom: 25px" class="input-group">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
                     <input class="form-control" type="email" name="email" id="email" placeholder="Email"
-                           ng-model="registerData.email" ng-disabled="Account.authenticate" required/>
+                           ng-model="registerData.email" ng-disabled="registerData.action != 'Register'" required/>
                 </div>
 
                 <div style="margin-bottom: 25px" class="input-group">
